samples/glossentry/invalid/R2.dita
<?xml version="1.0" encoding="UTF-8"?>
<glossentry>
  <title>A Title</title>
  <glossterm>Term</glossterm>
  <glossdef><p>Definition.</p></glossdef>
</glossentry>